real-time-stt/rest-api/v6.x/update.mdx
---
title: 'Update task configuration'
sidebar_position: 5
type: docs
platform_selector: false
hide_table_of_contents: true
description: >
   Initiate a request to update the transcription task configuration.
last_update:
  date: 2026-02-07
---

import RestAPILayout from '@site/src/components/rest-api/RestAPILayout';
import LeftColumn from '@site/src/components/rest-api/LeftColumn';
import RightColumn, { Section } from '@site/src/components/rest-api/RightColumn';
import ParameterList, { Parameter } from '@site/src/components/rest-api/ParameterList';
import PathParameter from '@site/src/components/rest-api/PathParameter';
import { Tabs, TabItem } from '@site/src/components/rest-api/Tabs';

<RestAPILayout>
  <LeftColumn
    method="PATCH"
    endpoint="https://api.agora.io/v1/projects/{appId}/rtsc/speech-to-text/tasks/{taskId}"
  >

Use this method to update the configuration of a <Vpd k="NAME" /> task.

## Request

### Path parameters

<PathParameter name="appId" type="string" required={true}>
The App ID of the project
</PathParameter>
<PathParameter name="taskId" type="string" required={true}>
The unique identifier of the <Vpd k="NAME" /> task you received in the response body of the [start](../v6.x/start) method.
</PathParameter>

### Query parameters

<PathParameter name="builderToken" type="string" required={true}>
The `tokenName` value you obtained in the response body of the [`acquire`](../v6.x/acquire) method.
</PathParameter>

<PathParameter name="sequenceId" type="integer" required={true}>
The sequence number of `update` requests. The integer value must be greater than or equal to 0. Ensure that the `sequenceId` of the next `update` request is greater than the value you specified for the previous request. The parameter ensures that <Vg k="COMPANY" /> updates the transcription task according to the latest configuration you specified.
</PathParameter>

<PathParameter name="updateMask" type="string" required={true}>
The specified update configuration item. To update multiple fields, use a comma separator. For example: `updateMask=languages,rtcConfig.subscribeAudioUids,translateConfig.enable,translateConfig.languages`.
</PathParameter>

### Request body

<div className="api-mime-type">APPLICATION/JSON</div>

<ParameterList title="BODY" required={true}>
  <Parameter name="languages" type="array[string]" required={false}>
    The transcription languages to recognize. You can specify up to 4 languages. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
  </Parameter>
  
  <Parameter name="uidLanguagesConfig" type="object" required={false}>
    Configure the transcription language for the specified user ID. Supports up to 5 configuration items.
    <Parameter name="uid" type="string" required={true}>
    The ID of the user to be transcribed.
    </Parameter>
    <Parameter name="languages" type="string" required={true}>
    You can specify up to 4 languages. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
    </Parameter>
  </Parameter>

  <Parameter name="rtcConfig" type="object" required={false}>
    <Parameter name="subscribeAudioUids" type="array[string]" required={false}>
      The user IDs of the audio streams you want to subscribe to. Specify this parameter only if you need to subscribe to specific users. To subscribe to audio streams of all users, use `["all"]`. Maximum array length: 32.
    </Parameter>
  </Parameter>
  <Parameter name="translateConfig" type="object" required={false}>
    Subtitle translation configuration
    <Parameter name="enable" type="boolean" required={true}>
      Whether to translate the transcribed text:
      - `true`: Translate.
      - `false`: Do not translate.  
      If you enabled translation when calling `start`, you can turn it off by setting `enable` to `false`. If you did not enable translation, you can turn it on by setting `enable` to `true` and specifying `languages`.
    </Parameter>    
    <Parameter name="languages" type="array" required={true}>
      The translation languages array. You can specify a maximum of 2 different source languages. The source language and target language must be different, otherwise an error is reported.      
      Each array item is an object with:
      <Parameter name="source" type="string" required={true}>
        The source language for translation. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
      </Parameter>      
      <Parameter name="target" type="array[string]" required={true}>
        The target languages for translation. You can specify a maximum of 5 target languages for each source language. Refer to [Supported Languages](/real-time-stt/develop/supported-languages) for details.
      </Parameter>
    </Parameter>
  </Parameter>    
</ParameterList>

## Response

- If the returned status code is `200`, the request was successful. The response body contains the result of the request.

  <ParameterList title="OK">
    <Parameter name="taskId" type="string" required={true}>
      The unique identifier of this transcription task.
    </Parameter>

    <Parameter name="createTs" type="integer" required={true}>
      The Unix timestamp (in seconds) when the transcription task was created.
    </Parameter>

    <Parameter name="status" type="string" required={true}>
      The current status of the transcription task:      
      - `IDLE`: Task not initialized
      - `PREPARING`: Task has received an initialization request
      - `PREPARED`: Task initialization completed
      - `STARTING`: Task is beginning to start
      - `CREATED`: Task startup partially completed
      - `STARTED`: Task startup fully completed
      - `IN_PROGRESS`: Task is currently running
      - `STOPPING`: Task is in the process of being paused
      - `STOPPED`: Task has been terminated
      - `FAILURE_STOP`: Task termination failed
    </Parameter>  
  </ParameterList>

- If the returned status code is not `200`, the request failed.  Refer to `message` field to understand the possible reasons for failure.

  <ParameterList title="Non-200">
    <Parameter name="message" type="string">
      The reason why the request failed.
    </Parameter>
  </ParameterList>

</LeftColumn>

<RightColumn>

<Section title="Authorization">
This endpoint requires [Basic Auth](../restful-authentication).
</Section>

<Section title="Request example">

  <Tabs groupId="code-examples">
    <TabItem value="curl" label="curl" default>
      ```bash
      curl --request PATCH \
        --url 'https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks/:taskId?builderToken=your_builder_token&sequenceId=your_sequence_id&updateMask=your_update_mask' \
        --header 'Authorization: Basic <credentials>' \
        --header 'Content-Type: <string>' \
        --data '
      {
        "languages": [
          "en-US"
        ],
        "uidLanguagesConfig": [
          {
            "uid": "12345",
            "languages": [
              "en-US"
            ]
          }
        ],
        "rtcConfig": {
          "subscribeAudioUids": [
            "47091",
            "88222"
          ]
        },
        "translateConfig": {
          "enable": true,
          "languages": [
            {
              "source": "en-US",
              "target": [
                "es-ES",
                "ar-SA"
              ]
            }
          ]
        }
      }'
      ```
    </TabItem>
    <TabItem value="python" label="Python">

    ```python
    import requests

    url = "https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks/:taskId?builderToken=your_builder_token&sequenceId=your_sequence_id&updateMask=your_update_mask"

    payload = {
        "languages": ["en-US"],
        "uidLanguagesConfig": [
            {
                "uid": "12345",
                "languages": ["en-US"]
            }
        ],
        "rtcConfig": { "subscribeAudioUids": ["47091", "88222"] },
        "translateConfig": {
            "enable": True,
            "languages": [
                {
                    "source": "en-US",
                    "target": ["es-ES", "ar-SA"]
                }
            ]
        }
    }
    headers = {
        "Authorization": "Basic <credentials>",
        "Content-Type": "<string>"
    }

    response = requests.request("PATCH", url, json=payload, headers=headers)

    print(response.text)
    ```
    </TabItem>

    <TabItem value="node" label="Node.js">

    ```js
    const url = 'https://api.agora.io/v1/projects/:appId/rtsc/speech-to-text/tasks/:taskId?builderToken=your_builder_token&sequenceId=your_sequence_id&updateMask=your_update_mask';
    const options = {
      method: 'PATCH',
      headers: {Authorization: 'Basic <credentials>', 'Content-Type': '<string>'},
      body: JSON.stringify({
        languages: ['en-US'],
        uidLanguagesConfig: [{uid: '12345', languages: ['en-US']}],
        rtcConfig: {subscribeAudioUids: ['47091', '88222']},
        translateConfig: {enable: true, languages: [{source: 'en-US', target: ['es-ES', 'ar-SA']}]}
      })
    };

    fetch(url, options)
      .then(res => res.json())
      .then(json => console.log(json))
      .catch(err => console.error(err));
    ```
    </TabItem>
  </Tabs>

</Section>
<Section title="Response example">

<Tabs groupId="response-examples">
  <TabItem value="200" label="200" default>

    ```json
    {
      "taskId": "XXXX",
      "createTs": 1678505852,
      "status": "IN_PROGRESS"
    }
    ```
  </TabItem>
  <TabItem value="non-200" label="Non-200" default>

    ```json
    {
      "message": "The reason why the request failed.",
    }
    ```
  </TabItem>
</Tabs>

</Section>
</RightColumn>
</RestAPILayout>